@@ -1110,7 +1110,7 @@ public interface EbsApplicationMapper {
   @Named("mapProceedingId")
   default String proceedingId(final Integer id) {
     return id != null
-        ? String.format("P_%s", id)
+        ? "P_%s".formatted(id)
         : null;
   }
 
